@@ -220,7 +220,7 @@ public class Int8Datum extends NumericDatum {
       DateDatum dateDatum = (DateDatum)datum;
       TimeMeta tm = dateDatum.toTimeMeta();
       tm.plusDays(asInt4());
-      return new DateDatum(DateTimeUtil.date2j(tm.years, tm.monthOfYear, tm.dayOfMonth));
+      return new DateDatum(tm);
     case NULL_TYPE:
       return datum;
     default:
@@ -245,7 +245,7 @@ public class Int8Datum extends NumericDatum {
       DateDatum dateDatum = (DateDatum)datum;
       TimeMeta tm = dateDatum.toTimeMeta();
       tm.plusDays(0 - asInt4());
-      return new DateDatum(DateTimeUtil.date2j(tm.years, tm.monthOfYear, tm.dayOfMonth));
+      return new DateDatum(tm);
     case NULL_TYPE:
       return datum;
     default:
